--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,8 @@
 * {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
 }
 
 body {
@@ -31,6 +32,15 @@ p {
     color: gray;
 }
 
-.right {
+p.right {
     text-align: right;
+}
+
+img.width {
+    width: 100%;
+    max-width: 100%;
+}
+
+video {
+    max-width: 100%;
 }
